Blender crashes when trying to undo adding new scene with "copy settings" #47188

Closed
opened 2016-01-16 04:57:40 +01:00 by Anthony Edlin · 8 comments

System Information
Recent custom build:
system-info.txt

Short description of error
Blender crashes when trying to undo adding new scene with "copy settings"

Exact steps for others to reproduce the error
Open blender and load factory settings
Click on plus icon next to scene dropdown and choose "copy settings"
Press Control+Z to undo and it crashes

here is gdb backtrace I got on crash:
backtrace.txt

**System Information** Recent custom build: [system-info.txt](https://archive.blender.org/developer/F274733/system-info.txt) **Short description of error** Blender crashes when trying to undo adding new scene with "copy settings" **Exact steps for others to reproduce the error** Open blender and load factory settings Click on plus icon next to scene dropdown and choose "copy settings" Press Control+Z to undo and it crashes here is gdb backtrace I got on crash: [backtrace.txt](https://archive.blender.org/developer/F274734/backtrace.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AnthonyEdlin

Added subscriber: @AnthonyEdlin

Added subscriber: @Chipe1

Added subscriber: @Chipe1

Added subscriber: @mont29

Added subscriber: @mont29

Yeah… our code to copy RenderSettings is a joke :|

Yeah… our code to copy RenderSettings is a joke :|
Bastien Montagne self-assigned this 2016-01-16 12:03:16 +01:00

This issue was referenced by 2c5bc023c2

This issue was referenced by 2c5bc023c23c68c39b373b34363542a390e82cb9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Removed subscriber: @Chipe1

Removed subscriber: @Chipe1
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47188
No description provided.