Fix T47188: Blender crashes when trying to undo adding new scene with "copy settings".

Our RenderSettings struct may have a bit too much levels, makes it hard to track
all 'pointer' data during copy...

Fixed several issues here, but not sure I found all existing ones. :/